# farplug

./: .hgignore  CMakeLists.txt  ProjectHome.md  archive.cpp  archive.hpp  common_types.hpp  comutils.hpp  distrib.bat  en.hlf  en.msg  error.hpp  extract.cpp  farutils.cpp  farutils.hpp  gendep.cpp  headers.hpp  inet.cpp  inet.hpp  iniparse.cpp  iniparse.hpp  makefile  msgc.cpp  noncopyable.hpp  open.cpp  options.cpp  options.hpp  pathutils.cpp  plugin.cpp  plugin.def  plugins.sln  preproc.cpp  project.ini  ru.hlf  ru.hlf.m4  ru.msg  strutils.cpp  sysutils.cpp  sysutils.hpp  transact.cpp  transact.hpp  (+9 more)
7z/CPP/7zip/Bundles/Format7zF/: Format7z.vcproj
arclite/: archive.cpp  archive.hpp  attr.cpp  cmdline.cpp  cmdline.hpp  common.cpp  common.hpp  common_types.hpp  comutils.hpp  delete.cpp  distrib.bat  en.hlf  en.msg  extract.cpp  headers.hpp  makefile  msearch.cpp  msearch.hpp  open.cpp  options.cpp  options.hpp  plugin.cpp  plugin.def  project.ini  rsrc.cpp  ru.hlf  ru.msg  sfx.cpp  test.cpp  ui.cpp  ui.hpp  update.cpp  version.rc
arclite/7z/CPP/7zip/Bundles/Format7zF/: Format7z.vcxproj  Format7z.vcxproj.filters
arclite/far/: farcolor.hpp  farkeys.hpp  plugin.hpp
arclite/farsdk/: farcolor.hpp  farkeys.hpp  plugin.hpp
arclite/installer/: installer.wxi  installer.wxs  plugin.wxi  plugin.wxs  ui.wxs
bundle/: custom.cpp  features.wxi  files.wxi  installer.mak.m4  installer.wxs
cmake/: MSVC.cmake  common.cmake
col/: AnsiString.h  ArrayBase.h  ObjectArray.h  PlainArray.h  UnicodeString.h
common/: error.hpp  farutils.cpp  farutils.hpp  strutils.cpp  sysutils.cpp  sysutils.hpp  utils.hpp
defrag/: CMakeLists.txt  defragment.cpp  defragment.h  main.cpp  utils.cpp  utils.h  volume.cpp  volume.h
far/: farcolor.hpp  farkeys.hpp  plugin.hpp
farpatch/: build.bat  far2.patch
farpatch/installer/: MyWixUI_FeatureTree.wxs  custom.cpp  features.wxi  files.wxi  installer.mak.m4  installer.wxs
installer/: build.mak  custom.cpp  features.wxi  files.wxi  installer.mak.m4  installer.wxi  installer.wxs  plugin.wxs  registry.wxi  shortcuts.wxi
msgc/: CMakeLists.txt  error.h  main.cpp
msiupdate/: CMakeLists.txt  en.hlf  en.hlf.m4  en.msg  error.hpp  farutils.cpp  farutils.hpp  guids.hpp  headers.hpp  icon.rc  inet.cpp  inet.hpp  iniparse.cpp  makefile  msiupdate.vcxproj  msiupdate.vcxproj.filters  options.cpp  options.hpp  plugin.cpp  plugin.def  plugin.h.h  project.ini  ru.hlf  ru.msg  strutils.cpp  sysutils.cpp  sysutils.hpp  transact.cpp  transact.hpp  trayicon.cpp  trayicon.hpp  ui.cpp  ui.hpp  update.cpp  update.hpp  utils.hpp  version.rc
msiupdate/installer/: installer.wxi  installer.wxs  plugin.wxi  plugin.wxi.wxi  ui_en-us.wxl
ntfsfile/: CMakeLists.txt  compress_files.cpp  compress_files.h  content.cpp  content.h  crc16.cpp  defragment.cpp  defragment.h  distrib.bat  dlgapi.cpp  dlgapi.h  en.hlf  en.hlf.m4  en.msg  error.h  farapi_config.h  file_id.diz  file_id.diz.m4  file_panel.cpp  file_panel.h  filever.cpp  filever.h  guids.h  headers.hpp  history_ru.txt  log.h  main.cpp  makefile  mftindex.cpp  ntfs.h  ntfs_file.cpp  ntfs_file.h  ntfsfile.vcxproj  ntfsfile.vcxproj.filters  options.cpp  options.h  plugin.def  plugin_uni.def  project.ini  ru.hlf  (+8 more)
ntfsfile/farpatch/: ntfsfile.patch
ntfsfile/farsdk/: farcolor.hpp  plugin.hpp
ntfsfile/farsdk/unicode/: farcolor.hpp  farkeys.hpp  plugin.hpp
ntfsfile/installer/: installer.wxi  makefile  plugin.wxi  plugin.wxi.wxi  plugin.wxs
ntfsfile/lzo/patch/: lzo-2.03.diff
ntfsfile/lzo/src/: build.bat
ntfsfile/openssl/patch/: openssl-0.9.8h.diff  openssl-1.0.0.diff  openssl-1.0.0a.diff  openssl-1.0.0b.diff
ntfsfile/openssl/src/: build.bat
svnrev/: CMakeLists.txt  error.h  main.cpp
tools/: common.hpp  gendep.cpp  makefile
uninstall/: CMakeLists.txt  EPlugin.cpp  FarLang.h  File_ID.diz  File_ID.diz.m4  ReadMe.Rus.txt  Registry.cpp  TechInfo.Rus.reg  UnInstall.cpp  UnInstall.def  UnInstall.hpp  UnInstall.rc  UnInstall.rc.m4  UnInstallW.def  UnInstall_Eng.hlf  UnInstall_Eng.hlf.m4  UnInstall_Eng.lng  UnInstall_Rus.hlf  UnInstall_Rus.hlf.m4  UnInstall_Rus.lng  WhatsNew.Rus.txt  distrib.bat  makefile  project.ini
wmexplorer/: CMakeLists.txt  Renewal.xml  as_api.h  distrib.bat  dlgapi.cpp  dlgapi.h  en.hlf  en.hlf.m4  en.msg  error.h  farapi_config.h  file_filters.cpp  file_filters.h  file_id.diz  file_id.diz.m4  file_info.cpp  file_info.h  filepath.cpp  filepath.h  guids.h  headers.hpp  history_en.txt  history_ru.txt  makefile  options.cpp  options.h  plugin.cpp  plugin.def  plugin.h  plugin_uni.def  project.ini  rapi_proc.cpp  rapi_proc.h  ru.hlf  ru.hlf.m4  ru.msg  ui.cpp  ui.h  util.cpp  util.h  (+5 more)
wmexplorer/farsdk/: farcolor.hpp  plugin.hpp
wmexplorer/installer/: installer.wxi  installer.wxs  plugin.wxi.wxi  plugin.wxs
wmexplorer/rapi/: IRAPIStream.h  ce_setup.h  ceapimap.h  cefltmap.h  cesync.h  ceutil.h  dccole.h  dccole2.h  rapi.h  rapi2.h  rapitypes.h  rapitypes2.h  replerr.h  replfilt.h
